<resources>
    <string name="app_name">The GSE</string>
    <string name="base_url">https://gse.ibercivis.es</string>

    <string name="claim1">Are you able to distinguish which audio sounds better?</string>
    <string name="claim2">Listen, learn, compete</string>
    <string name="registro">SIGN UP</string>
    <string name="login">LOG IN</string>

    <string name="enhorabuena">¡Congratulations!</string>

    <string name="level1">Level 1</string>
    <string name="level2">Level 2</string>
    <string name="level3">Level 3</string>
    <string name="level4">Level 4</string>
    <string name="level5">Level 5</string>
    <string name="claim3">Press to listen to the audios</string>
    <string name="claim4">Switch between audios to notice the differences between them</string>
    <string name="claim5">Are you ready to choose the audio that sounds best?</string>

    <string name="stats">Statistics</string>
    <string name="stats1">Here you can check your statistics. You can apply a filter to the general statistics and, in this way, get an idea of ​​the results obtained by the different user profiles.</string>
    <string name="stats2">You can perform your own analysis using the filters</string>
    <string name="stats3">Filter:</string>

    <string name="perfil">Profile</string>
    <string name="userpro">Username:</string>
    <string name="claimpro">Complete your profile to prepare statistics</string>
    <string name="passpro">Change password</string>
    <string name="pro1">Sex:</string>
    <string name="pro2">Age:</string>
    <string name="pro3">Musical formation:</string>
    <string name="pro4">Headphones:</string>
    <string name="pro5">Headphones price:</string>
    <string name="pro6">Modify</string>
    <string name="pro7">Close session</string>
    <string name="pro8">Country:</string>

    <string name="login1">LOG IN</string>
    <string name="login2">Username</string>
    <string name="login3">Password</string>
    <string name="login4">APPLY</string>
    <string name="login5">Have you forgotten your password?</string>
    <string name="login6">E-mail</string>
    <string name="login7">Cancel</string>


    <string name="reto">The Challenge</string>
    <string name="reto1">Do you accept the challenge?</string>
    <string name="reto2">You will find 2 audios of different quality. First you must listen to each one; Then, choose which of the two sounds better.</string>
    <string name="reto3">Remember to use your headphones to appreciate the differences. Every level is harder that the previous one!</string>
    <string name="reto4">Play</string>

    <string name="email">E-mail</string>
    <string name="usersign">Username</string>
    <string name="passsign">Password</string>

    <string name="item1">Stats</string>
    <string name="item2">The Challenge</string>
    <string name="item3">Profile</string>


    <string name="claim6">I think...</string>
    <string name="claim7">...sounds better</string>

    <string name="token"></string>
    <string name="idUser"></string>

    <string name="rgpd">For a correct compliance with the new regulation of Data Protection, you are informed that we are going to register your email address on our servers, with the sole purpose of being able to offer a password recovery service in case you forget it. The rest of the data that is requested will be used only for statistical purposes. You can request more information or ask us to delete your data from our servers, for this write an email to the address info@ibercivis.es</string>
</resources>
