<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil"
    android:background="#333333">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    //Cabecera - Título

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil"
        android:textStyle="bold"
        android:textSize="40dp"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"/>

    // Zona Amarilla de ESCUCHA

    <LinearLayout
        android:id="@+id/espacioclaim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titulo"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:background="#40ffcc00">


        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/claimpro"
            android:layout_marginBottom="24dp"/>



    </LinearLayout>

    //A partir de aquí es el ESPACIO DE RESPUESTA

    <LinearLayout
        android:id="@+id/infouser"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/espacioclaim"
        android:layout_margin="16dp"
        android:background="@drawable/boton_redondo_inicio"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userpro"
            android:textStyle="bold"
            />

            <TextView
                android:id="@+id/textparauser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Username"
                android:layout_marginLeft="8dp"
                />

        </LinearLayout>

        <Button
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/passpro"
            android:background="@drawable/boton_redondo_inicio"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/infoextra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/infouser"
        android:layout_margin="16dp"
        android:background="@drawable/boton_redondo_inicio"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/pro1"/>

        <Spinner
            android:id="@+id/spinnersexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"></Spinner>

    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/pro2"/>

            <Spinner
                android:id="@+id/spinneredad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"></Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/pro3"/>

            <Spinner
                android:id="@+id/spinnerformacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"></Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/pro4"/>

            <Spinner
                android:id="@+id/spinnerauriculares"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"></Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/pro5"/>

            <Spinner
                android:id="@+id/spinnerprecios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"></Spinner>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:id="@+id/aceptarcambios"
        android:layout_below="@id/infoextra"
        android:layout_centerHorizontal="true"
        android:text="@string/pro6"
        android:background="@drawable/boton_redondo_inicio"/>


        </RelativeLayout>
    </ScrollView>

    //A partir de aquí es toda la barra de abajo - JUEGO

    <LinearLayout
        android:id="@+id/barrafondo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/stats_gris_def"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/juego_gris_def"
                android:onClick="aJuego"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/perfil_blanco_def"/>
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>

