<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondoregistros"
        android:scaleType="centerCrop"/>

    <!--<View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/marcohome"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="LogoGSE"
        app:srcCompat="@drawable/logobueno" />-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:contentDescription="LogoGSE"
        app:srcCompat="@drawable/logosolido2"
        android:transitionName="mainlogo"/>


    <TextView
        android:id="@+id/identificate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login1"
        android:layout_below="@id/imageView"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:textSize="18dp"/>



    <LinearLayout
        android:id="@+id/usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/identificate"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="64dp">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:src="@drawable/iconousuario"
            android:layout_gravity="center"
            />

        <android.support.design.widget.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:focusableInTouchMode="true"
            android:focusable="true"
            >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtusuario"

            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/login2"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="#FFFF"
            android:textColorHint="#FFFF"
            android:visibility="visible"
            android:maxLines="1"

            />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usuario"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="64dp">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:src="@drawable/iconocontrasena"
            android:layout_gravity="center"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:focusableInTouchMode="true"
            android:focusable="true"
            >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtcontraseña"

            android:layout_width="200dp"
            android:paddingRight="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/login3"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#FFFF"
            android:textColorHint="#FFFF"
            android:visibility="visible"
            android:maxLines="1"

           />

        </android.support.design.widget.TextInputLayout>





    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginHorizontal="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/boton_redondo_inicio"
        android:text="@string/login4"
        android:textSize="16dp"
        android:clickable="true"
        android:textStyle="bold"
        android:onClick="aDentro"/>


</RelativeLayout>